<resources>
    <string name="app_name">Lúc lắc</string>
    <string name="title_base">Base module</string>
    <string name="default_image">Default Image</string>
    <string name="lucky_money">Lì Xì Đầu Năm</string>
    <string name="congratulation_received">Chúc mừng bạn nhận được</string>
    <string name="sound">Âm thanh</string>
    <string name="lucky_setting">Tiền lì xì</string>
    <string name="config_sound">Cấu hình âm thanh </string>
    <string name="music_background">Nhạc nền</string>
    <string name="quit">Quay lại</string>
    <string name="back_notification">Nhấn lần nữa để quay lại!</string>
    <string name="money_current">Tiền lì xì</string>
    <string name="save">Lưu</string>
    <string name="max_number_99">Số lượng tiền lì xì tối đa là 99</string>
    <string name="not_have_money">Hết tiền lì xì rồi!</string>
    <string name="add_money">Thêm lì xì</string>
    <string name="spinner_lucky">Vòng quay lì xì</string>
    <string name="start">Bắt đầu</string>
</resources>