<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_custom">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_soul_regular"
            android:text="@string/lucky_money"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_184"
            android:layout_height="@dimen/dp_184"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/ic_logo_lucky_money" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/button_rounded_rectangle"
            android:fontFamily="@font/great_vibes_regular"
            android:text="@string/lucky_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/button_rounded_rectangle"
            android:fontFamily="@font/great_vibes_regular"
            android:text="@string/sound"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/button_rounded_rectangle"
            android:fontFamily="@font/great_vibes_regular"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</RelativeLayout>
