<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/dp_15"
        app:cardElevation="0px"
        tools:context=".ui.dialog.SoundDialog">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_gradient_custom"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:id="@+id/tvTitle"
                android:background="@drawable/top_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/great_vibes_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_4"
                android:text="@string/not_have_money"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/llBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_rectangle"
                    android:fontFamily="@font/great_vibes_regular"
                    android:text="@string/quit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_rectangle"
                    android:fontFamily="@font/great_vibes_regular"
                    android:text="@string/add_money"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>