<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="@dimen/dp_15"
            app:cardElevation="0px">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient_custom" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_above="@id/llBottom"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/great_vibes_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingVertical="@dimen/dp_4"
                        android:text="@string/money_current"
                        android:background="@drawable/top_bg"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_30"
                        android:textStyle="bold" />
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvMoney"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_8"/>
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBottom"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:paddingHorizontal="@dimen/dp_32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:layout_weight="1"
                        android:background="@drawable/button_rounded_rectangle"
                        android:fontFamily="@font/great_vibes_regular"
                        android:text="@string/quit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_weight="1"
                        android:background="@drawable/button_rounded_rectangle"
                        android:fontFamily="@font/great_vibes_regular"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
</layout>